--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-snap": "^1.23.0",
     "react-spinners": "^0.10.6",
     "web-vitals": "^1.1.0"
   },
@@ -25,9 +24,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postbuild": "react-snap"
-  },
-  "reactSnap": {
-    "fixWebpackChunksIssue": false
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-snap": "^1.23.0"
   }
 }
