--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "reactSnap": {
+    "puppeteerExecutablePath": "/usr/bin/google-chrome-unstable"
   }
 }
