react snap include path

--- a/package.json
+++ b/package.json
@@ -53,6 +53,15 @@
       "--disable-gpu"
     ],
     "inlineCss": true,
-    "headless": true
+    "headless": true,
+    "include": [
+      "/o_mne",
+      "/projekty",
+      "/kontakt",
+      "/en",
+      "/en/about",
+      "/en/projects",
+      "/en/contact"
+    ]
   }
 }
