--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "homepage": "https://cheesefield.vercel.app/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
+    "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-snap": "^1.3.0",
     "react-spinners": "^0.10.6",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
