update souboru na nove verze

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://cheesefield.vercel.app/",
   "dependencies": {
+    "@emotion/core": "^10.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@testing-library/jest-dom": "^5.11.9",
@@ -14,8 +15,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-modal-image": "^2.5.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
     "react-snap": "^1.3.0",
     "react-spinners": "^0.10.6",
     "web-vitals": "^1.1.1"
